# routes/index.js
@@ -7,6 +7,7 @@ const mongodb = require('../data/database');
 router.use('/', require('./swagger'));
 router.use('/authors', require('./authors'));
 router.use('/blogs', require('./blogs'));
+router.use('/comments', require('./comments'));
 
 router.get('/login', passport.authenticate('github'), (req, res) => {
     console.log(req.session);
